[package]
name = "what-the-struct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-trait = "0.1.53"
futures = "0.3.21"
petgraph = "0.6.1"
reqwest = "0.11.10"
soup = "0.5.1"
tokio = { version = "1.18.2", features = ["full"] }
url = "2.2.2"
