[package]
name = "what-the-struct"
version = "0.1.0"
edition = "2021"
description = "Build a graph of structs referencing other structs"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-recursion = "1.0.0"
async-trait = "0.1.53"
clap = { version = "3.1.18", features = ["derive"] }
futures = "0.3.21"
petgraph = "0.6.1"
reqwest = "0.11.10"
soup = "0.5.1"
sprawl = "0.1.0"
tokio = { version = "1.18.2", features = ["full"] }
tracing = "0.1.34"
tracing-subscriber = "0.3.11"
url = "2.2.2"
