[package]
name = "what-the-struct"
version = "0.1.0"
edition = "2021"
description = "Build a graph of structs referencing other structs"
license = "MIT"
repository = "https://github.com/aatifsyed/what-the-struct"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
async-recursion = "1.0.0"
async-trait = "0.1.53"
cargo_metadata = "0.15.2"
clap = { version = "4.0.29", features = ["derive"] }
color-eyre = "0.6.2"
futures = "0.3.21"
once_cell = "1.17.0"
petgraph = "0.6.1"
reqwest = "0.11.10"
rustdoc-json = "0.7.2"
rustdoc-types = "0.19.0"
serde_json = "1.0.89"
serde_path_to_error = "0.1.8"
soup = "0.5.1"
sprawl = "0.1.0"
tap = "1.0.1"
tokio = { version = "1.18.2", features = ["full"] }
tracing = "0.1.34"
tracing-error = { version = "0.2.0", features = ["traced-error"] }
tracing-subscriber = { version = "0.3.11", features = ["fmt", "env-filter"] }
url = "2.2.2"

[[example]]
name = "foo"
path = "examples/foo/src/lib.rs"
crate-type = ["lib"]
test = true
